--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -306,3 +306,22 @@ header {
     background-image: url(../img/archer-mage.png);
     background-repeat: no-repeat;
 }
+
+/* Footer */
+.site-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    z-index: 1000; 
+}
+
+
+.site-footer p {
+    margin: 0;
+    font-size: 18px;
+}
